objects/Apttus_Shadow_Table__c.object
<CustomObject>
    <description>Created as a Part of DPS-22594</description>
    <fields>
        <fullName>LCRM_Feature_Name__c</fullName>
        <description>Created as a Part of DPS-22594</description>
        <label>Feature Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Feature_Set_Name__c</fullName>
        <description>Created as a Part of DPS-22594</description>
        <label>Feature Set Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Feature_Value__c</fullName>
        <description>Created as a Part of DPS-22594</description>
        <label>Feature Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Physical_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a Part of DPS-22594</description>
        <label>Physical Description</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Physical Description</relationshipLabel>
        <relationshipName>Apttus_Shadow_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_ID__c</fullName>
        <description>Created as a Part of DPS-22594</description>
        <label>Product ID</label>
        <type>TextArea</type>
    </fields>
    <label>Apttus Shadow Table</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Apttus Shadow Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apttus Shadow Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>